--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -150,9 +150,9 @@ dependencies {
     testCompile 'org.robolectric:shadows-support-v4:3.3.2'
     testCompile 'org.robolectric:shadows-play-services:3.3.2'
     testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
-
-    testCompile('com.squareup:fest-android:1.0.7') {
+    testCompile('com.squareup.assertj:assertj-android:1.1.1') {
         exclude module: 'support-v4'
+        exclude module: 'support-annotations'
     }
     testCompile 'org.mockito:mockito-all:1.9.5'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.8.1'
