--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.3.3'
     classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.7.0'
+    classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
   }
 }
 
@@ -26,6 +27,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.vanniktech.android.junit.jacoco'
+apply plugin: 'org.sonarqube'
+
+sonarqube {
+  properties {
+    property "sonar.host.url", "https://sonarcloud.io"
+    property "sonar.organization", "kingargyle-github"
+    property "sonar.login", "cb7af08f0b0e86306ac5365074326dc27aba503e"
+    property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/testDebugUnitTest.exec"
+  }
+}
 
 android {
   defaultConfig {
