--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 org.gradle.daemon=false
-org.gradle.jvmargs=-Xmx1024m
-android.enableBuildCache=true
+org.gradle.jvmargs=-Xms256m -Xmx512m -XX:+UseStringDeduplication
+android.enableBuildCache=false
