--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -1,4 +1,24 @@
+buildscript {
+
+  dependencies {
+    classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
+  }
+
+}
+
 apply plugin: 'java'
+apply plugin: "jacoco"
+apply plugin: 'org.sonarqube'
+
+sonarqube {
+  properties {
+    property "sonar.host.url", "https://sonarcloud.io"
+    property "sonar.organization", "kingargyle-github"
+    property "sonar.login", "cb7af08f0b0e86306ac5365074326dc27aba503e"
+    property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
+  }
+}
+
 
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
@@ -7,9 +27,23 @@ repositories {
   jcenter()
   mavenCentral()
   maven {
-     url "http://kingargyle.github.io/repo"
+    url "http://kingargyle.github.io/repo"
   }
 }
+
+sourceSets {
+  main {
+    java {
+      srcDirs = ["src/main/java"]
+    }
+  }
+  test {
+    java {
+      srcDirs = ["src/test/java"]
+    }
+  }
+}
+
 
 dependencies {
 
@@ -17,16 +51,15 @@ dependencies {
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
   compile 'com.squareup.okhttp3:okhttp:3.8.1'
   compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-  compile ('com.squareup.retrofit2:converter-simplexml:2.3.0') {
+  compile('com.squareup.retrofit2:converter-simplexml:2.3.0') {
     exclude group: 'stax'
     exclude group: 'xpp3'
   }
   compile 'com.squareup.retrofit2:converter-scalars:2.2.0'
 
 
-  testCompile 'junit:junit:4.11'
+  testCompile 'junit:junit:4.12'
   testCompile 'xmlunit:xmlunit:1.3'
-
 }
 
 jar {
@@ -36,5 +69,29 @@ jar {
 }
 
 test {
-  enabled false
+  minHeapSize = "128m"
+  maxHeapSize = "512m"
+
+  testLogging {
+    events "passed", "skipped", "failed", "standardOut", "standardError"
+  }
+  dependsOn 'cleanTest'
+
+  finalizedBy jacocoTestReport
 }
+
+jacoco {
+  toolVersion = "0.7.6.201602180812"
+  reportsDir = file("$buildDir/jacoco-report")
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled true
+    csv.enabled false
+    html.destination file("${buildDir}/jacoco-report/html")
+  }
+}
+
+tasks.jacocoTestReport.dependsOn("test")
+
