Add missing repository

--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -1,5 +1,10 @@
 buildscript {
 
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
+
   dependencies {
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
   }
