--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -1,9 +1,61 @@
-apply plugin: 'java'
+buildscript {
+    ext.kotlin_version = '1.1.3-2'
+
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
+    }
+
+}
+
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
+android {
+    defaultConfig {
+        minSdkVersion 17
+        targetSdkVersion 25
+    }
+
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+    }
+
+}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile fileTree(dir: 'embylib', include: ['*.jar'])
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2"
+
+    compile project(':serenity-common')
+
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
+    compile 'de.duenndns:memorizing-trust-manager:0.9'
+    compile 'com.mcxiaoke.volley:library:1.0.16'
+    compile 'com.birbit:android-priority-jobqueue:2.0.1'
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.8.0'
 }
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
+repositories {
+    jcenter()
+    mavenCentral()
+}
+
