--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -1,8 +1,27 @@
-apply plugin: 'java'
+buildscript {
+    ext.kotlin_version = '1.1.3-2'
 
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2"
+
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
 }
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
