Update repositories for travis-ci

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,21 @@
 buildscript {
   repositories {
+    jcenter()
     mavenCentral()
   }
 }
 
 repositories {
+  jcenter()
   mavenCentral()
 }
 
 dependencies {
+   project(":serenity-common")
+   project(":serenity-android-common")
+   project(":subtitle-converter")
+   project(":plexapp-rest-library")
+   project(":emby-lib")
    project(":serenity-app")
 }
 
