--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -11,6 +11,11 @@ buildscript {
     }
 }
 
+repositories {
+    jcenter()
+    mavenCentral()
+}
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
