--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -13,6 +13,11 @@ buildscript {
 
 }
 
+repositories {
+  jcenter()
+  mavenCentral()
+}
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
