--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -16,6 +16,9 @@ buildscript {
 repositories {
     jcenter()
     mavenCentral()
+    maven {
+        url 'https://dl.bintray.com/mamohr/maven/'
+    }
 }
 
 apply plugin: 'com.android.library'
