Initial serer discovery for Emby

--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -55,6 +55,8 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile project(':serenity-common')
   compile 'com.squareup.dagger:dagger:1.2.2'
+  compile 'org.greenrobot:eventbus:3.0.0'
+
   compile 'com.birbit:android-priority-jobqueue:2.0.1'
   kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
 
