--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2"
 
     compile project(':serenity-common')
+    compile project(':serenity-android-common')
     compile project(':memorizing-trust-manager')
 
     compile 'com.google.code.gson:gson:2.7'
@@ -57,6 +58,17 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.8.0'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
+    testCompile('org.robolectric:robolectric:3.4.2') {
+        exclude module: 'support-v4'
+    }
+    testCompile 'org.robolectric:framework:3.4.2'
+    testCompile 'org.robolectric:httpclient:3.4.2'
+    testCompile 'org.robolectric:supportv4:3.4.2'
+    testCompile 'org.robolectric:playservices:3.4.2'
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+
 }
 
 sourceCompatibility = "1.7"
