--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.3'
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.7.0'
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
   }
@@ -121,14 +121,28 @@ junitJacoco {
 
 dependencies {
 
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2"
-  compile 'com.arello-mobile:moxy:1.5.3'
-  kapt 'com.arello-mobile:moxy-compiler:1.5.3'
-  compile 'com.arello-mobile:moxy-app-compat:1.5.3'
-
-  compile 'com.github.bumptech.glide:glide:3.8.0'
   compile group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
 
+  compile project(':plexapp-rest-library')
+  compile project(':subtitle-converter')
+  compile project(':emby-lib')
+  compile project(':serenity-android-common')
+
+  compile ('com.google.android.exoplayer:exoplayer-core:r2.5.1') {
+    exclude module: 'support-annotations'
+  }
+  compile ('com.google.android.exoplayer:exoplayer-ui:r2.5.1') {
+    exclude module: 'support-annotations'
+  }
+
+  compile('com.squareup.okhttp3:okhttp:3.6.0') {
+    exclude group: 'com.android.support'
+  }
+  
+  compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2'
+  compile 'com.arello-mobile:moxy:1.5.3'
+  compile 'com.arello-mobile:moxy-app-compat:1.5.3'
+  compile 'com.github.bumptech.glide:glide:3.8.0'
   compile 'org.apache.commons:commons-lang3:3.3.2'
   compile 'org.greenrobot:eventbus:3.0.0'
   compile 'com.birbit:android-priority-jobqueue:2.0.1'
@@ -136,38 +150,34 @@ dependencies {
   compile 'com.android.support:appcompat-v7:25.3.1'
   compile 'com.android.support:leanback-v17:25.3.1'
   compile 'com.android.support:support-v4:25.3.1'
-  compile project(':plexapp-rest-library')
-  compile project(':subtitle-converter')
-  compile project(':emby-lib')
-  compile project(':serenity-android-common')
   compile 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
   compile 'com.mcxiaoke.volley:library:1.0.6'
-  compile('com.squareup.okhttp3:okhttp:3.6.0') {
-    exclude group: 'com.android.support'
-  }
   compile 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
   compile 'com.squareup.dagger:dagger:1.2.2'
-  kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
   compile 'com.github.vganin:dpadaware-recyclerview:1.0.1'
   compile 'com.jakewharton:butterknife:8.4.0'
-  kapt 'com.jakewharton:butterknife-compiler:8.4.0'
 
-  testCompile 'org.assertj:assertj-core:3.8.0'
-  testCompile 'junit:junit:4.12'
   testCompile('org.robolectric:robolectric:3.4.2') {
     exclude module: 'support-v4'
   }
+  testCompile('com.squareup.assertj:assertj-android:1.1.1') {
+    exclude module: 'support-v4'
+    exclude module: 'support-annotations'
+  }
+
+  testCompile 'org.assertj:assertj-core:3.8.0'
+  testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:framework:3.4.2'
   testCompile 'org.robolectric:httpclient:3.4.2'
   testCompile 'org.robolectric:supportv4:3.4.2'
   testCompile 'org.robolectric:playservices:3.4.2'
   testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
-  testCompile('com.squareup.assertj:assertj-android:1.1.1') {
-    exclude module: 'support-v4'
-    exclude module: 'support-annotations'
-  }
   testCompile 'org.mockito:mockito-all:1.9.5'
   testCompile 'com.squareup.okhttp3:mockwebserver:3.8.1'
   testCompile 'commons-io:commons-io:2.4'
+
+  kapt 'com.arello-mobile:moxy-compiler:1.5.3'
+  kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
+  kapt 'com.jakewharton:butterknife-compiler:8.4.0'
   kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
 }
