--- a/serenity-app/src/main/AndroidManifest.xml
+++ b/serenity-app/src/main/AndroidManifest.xml
@@ -5,17 +5,17 @@
     android:versionName="1.9.4.20150220-1911"
     package="us.nineworlds.serenity">
 
+  <uses-sdk
+      android:minSdkVersion="17"
+      android:targetSdkVersion="25"
+      tools:overrideLibrary="android.support.v17.leanback"/>
+
   <!-- try to exclude phone devices from the list. Currently only support Tablets and TVs -->
   <supports-screens
       android:largeScreens="true"
       android:normalScreens="false"
       android:smallScreens="false"
       android:xlargeScreens="true"/>
-
-  <uses-sdk
-      android:minSdkVersion="17"
-      android:targetSdkVersion="25"
-      tools:overrideLibrary="android.support.v17.leanback"/>
 
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -54,33 +54,33 @@
       android:name="android.software.leanback"
       android:required="false"/>
 
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
   <application
+      android:name=".SerenityApplication"
       android:allowBackup="true"
       android:hardwareAccelerated="true"
       android:icon="@drawable/serenity_bonsai_logo"
       android:label="@string/app_name"
       android:largeHeap="true"
-      android:name="us.nineworlds.serenity.SerenityApplication"
       android:theme="@style/AppTheme">
-
     <meta-data
         android:name="us.nineworlds.serenity.SerenityGlideModule"
         android:value="GlideModule"/>
-
     <meta-data
         android:name="android.app.default_searchable"
         android:value="us.nineworlds.serenity.ui.search.SearchableActivity"/>
 
     <activity
+        android:name=".ui.browser.movie.MovieBrowserActivity"
         android:hardwareAccelerated="true"
         android:label="@string/title_activity_movie_browser"
-        android:name="us.nineworlds.serenity.ui.browser.movie.MovieBrowserActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme"/>
     <activity
+        android:name=".MainActivity"
         android:hardwareAccelerated="true"
         android:label="@string/title_activity_main"
-        android:name="us.nineworlds.serenity.MainActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme">
       <intent-filter>
@@ -90,11 +90,11 @@
       </intent-filter>
     </activity>
     <activity
+        android:name=".AndroidTV"
         android:hardwareAccelerated="true"
         android:icon="@drawable/serenity_androidtv_banner"
         android:label="@string/title_activity_main"
         android:logo="@drawable/serenity_androidtv_banner"
-        android:name="us.nineworlds.serenity.AndroidTV"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme">
       <intent-filter>
@@ -104,31 +104,31 @@
       </intent-filter>
     </activity>
     <activity
+        android:name=".ui.leanback.search.SearchActivity"
         android:hardwareAccelerated="true"
         android:icon="@drawable/serenity_androidtv_banner"
         android:label="Search"
-        android:name="us.nineworlds.serenity.ui.leanback.search.SearchActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/Theme.Leanback">
-      &gt;
+      >
     </activity>
     <activity
+        android:name=".ui.browser.tv.TVShowBrowserActivity"
         android:label="@string/title_activity_tvbrowser_show"
-        android:name="us.nineworlds.serenity.ui.browser.tv.TVShowBrowserActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme"/>
     <activity
+        android:name=".ui.browser.tv.seasons.TVShowSeasonBrowserActivity"
         android:label="@string/title_activity_tvbrowser_show_season"
-        android:name="us.nineworlds.serenity.ui.browser.tv.seasons.TVShowSeasonBrowserActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme"/>
     <activity
+        android:name=".ui.browser.tv.episodes.EpisodeBrowserActivity"
         android:label="@string/title_activity_tvbrowser_show_episodes"
-        android:name="us.nineworlds.serenity.ui.browser.tv.episodes.EpisodeBrowserActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme"/>
     <activity
-        android:name="us.nineworlds.serenity.ui.video.player.SerenitySurfaceViewVideoActivity"
+        android:name=".ui.video.player.SerenitySurfaceViewVideoActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/Theme.AppCompat.NoActionBar">
       <intent-filter>
@@ -140,7 +140,7 @@
       </intent-filter>
     </activity>
     <activity
-        android:name="us.nineworlds.serenity.ui.video.player.RecommendationPlayerActivity"
+        android:name=".ui.video.player.RecommendationPlayerActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/Theme.AppCompat.NoActionBar">
       <intent-filter>
@@ -155,7 +155,7 @@
         android:name=".ui.preferences.SerenityPreferenceActivity"
         android:screenOrientation="sensorLandscape"/>
     <activity
-        android:name="us.nineworlds.serenity.ui.search.SearchableActivity"
+        android:name=".ui.search.SearchableActivity"
         android:screenOrientation="sensorLandscape"
         android:theme="@style/CustomActionBarTheme">
       <intent-filter>
@@ -172,25 +172,28 @@
 
     <service android:name=".core.services.MovieSearchIntentService"/>
     <service
+        android:name=".core.services.OnDeckRecommendationIntentService"
         android:enabled="true"
-        android:exported="true"
-        android:name="us.nineworlds.serenity.core.services.OnDeckRecommendationIntentService"/>
+        android:exported="true"/>
 
     <provider
-        android:authorities="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider"
-        android:name="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider"/>
+        android:name=".ui.search.SerenitySuggestionProvider"
+        android:authorities="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider"/>
     <provider
+        android:name=".core.SerenityRecommendationContentProvider"
         android:authorities="us.nineworlds.serenity.core.SerenityRecommendationContentProvider"
-        android:exported="true"
-        android:name="us.nineworlds.serenity.core.SerenityRecommendationContentProvider"/>
+        android:exported="true"/>
 
-    <receiver android:name="us.nineworlds.serenity.StartupBroadcastReceiver">
+    <receiver android:name=".StartupBroadcastReceiver">
       <intent-filter>
         <action android:name="android.intent.action.BOOT_COMPLETED"/>
 
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </receiver>
+
+    <activity android:name=".ui.video.player.ExoplayerVideoActivity">
+    </activity>
   </application>
 
 </manifest>
