--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.1.4-3'
 
     repositories {
         jcenter()
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
     }
 }
 
@@ -21,7 +21,7 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2"
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.4-3'
 
     compile 'com.squareup.dagger:dagger:1.2.2'
     kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
