--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -7,6 +7,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.3'
     classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
+    classpath 'org.jetbrains.kotlin:kotlin-allopen:1.1.4-3'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.7.0'
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
   }
@@ -26,6 +27,7 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: "kotlin-allopen"
 apply plugin: 'com.vanniktech.android.junit.jacoco'
 apply plugin: 'org.sonarqube'
 
@@ -40,6 +42,10 @@ sonarqube {
               com/arellomobile/**/*.class, net/ganin/darv/**/*.class, **/*ViewStateProvider.class,\
               **/*PresentersBinder.class, us/nineworlds/serenity/R.*.class"
   }
+}
+
+allOpen {
+  annotation("us.nineworlds.serenity.OpenForTesting")
 }
 
 android {
@@ -176,8 +182,10 @@ dependencies {
   testCompile 'org.robolectric:httpclient:3.4.2'
   testCompile 'org.robolectric:supportv4:3.4.2'
   testCompile 'org.robolectric:playservices:3.4.2'
+  testCompile 'org.robolectric:multidex:3.4.2'
   testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
-  testCompile 'org.mockito:mockito-all:1.9.5'
+  testCompile 'org.mockito:mockito-core:2.8.9'
+
   testCompile 'com.squareup.okhttp3:mockwebserver:3.8.1'
   testCompile 'commons-io:commons-io:2.4'
 
