Additional tests for Presenter
Also move OpenForTesting annotation to the common folder
so it can be used in other parts of the application when
testing kotlin classes.

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -45,7 +45,7 @@ sonarqube {
 }
 
 allOpen {
-  annotation("us.nineworlds.serenity.OpenForTesting")
+  annotation("us.nineworlds.serenity.common.annotations.OpenForTesting")
 }
 
 android {
@@ -65,6 +65,7 @@ android {
 
   sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
   }
 
 
