--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,17 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    google()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.0.1'
   }
 }
 
 repositories {
   jcenter()
   mavenCentral()
+  google()
 }
 
 dependencies {
