--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -7,7 +7,6 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
     classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
   }
 
@@ -24,7 +23,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 25
-  buildToolsVersion "25.0.2"
+  buildToolsVersion '26.0.2'
 
   defaultConfig {
     minSdkVersion 17
