--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
 
   repositories {
+    google()
     jcenter()
     mavenCentral()
+
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
     classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
     classpath 'org.jetbrains.kotlin:kotlin-allopen:1.1.4-3'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.7.0'
@@ -17,6 +18,7 @@ evaluationDependsOn(':plexapp-rest-library')
 evaluationDependsOn(':subtitle-converter')
 
 repositories {
+  google()
   jcenter()
   mavenCentral()
   maven {
@@ -54,7 +56,7 @@ android {
     versionName "2.0.0-M4"
 
     minSdkVersion 17
-    targetSdkVersion 25
+    targetSdkVersion 27
     multiDexEnabled true
 
   }
@@ -69,8 +71,8 @@ android {
   }
 
 
-  compileSdkVersion 25
-  buildToolsVersion "25.0.2"
+  compileSdkVersion 27
+  buildToolsVersion '26.0.2'
 
   if (project.hasProperty("keystore")) {
     signingConfigs {
@@ -133,71 +135,71 @@ junitJacoco {
 
 dependencies {
 
-  compile group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
+  implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
 
-  compile project(':plexapp-rest-library')
-  compile project(':subtitle-converter')
-  compile project(':emby-lib')
-  compile project(':serenity-android-common')
+  implementation project(':plexapp-rest-library')
+  implementation project(':subtitle-converter')
+  implementation project(':emby-lib')
+  implementation project(':serenity-android-common')
 
-  compile ('com.google.android.exoplayer:exoplayer-core:r2.5.1') {
+  implementation ('com.google.android.exoplayer:exoplayer-core:r2.5.1') {
     exclude module: 'support-annotations'
   }
-  compile ('com.google.android.exoplayer:exoplayer-ui:r2.5.1') {
-    exclude module: 'support-annotations'
-  }
-
-  compile ('com.google.android.exoplayer:extension-okhttp:r2.5.1') {
+  implementation ('com.google.android.exoplayer:exoplayer-ui:r2.5.1') {
     exclude module: 'support-annotations'
   }
 
-  compile('com.squareup.okhttp3:okhttp:3.6.0') {
+  implementation ('com.google.android.exoplayer:extension-okhttp:r2.5.1') {
+    exclude module: 'support-annotations'
+  }
+
+  implementation('com.squareup.okhttp3:okhttp:3.6.0') {
     exclude group: 'com.android.support'
   }
 
-  compile 'com.android.support:multidex:1.0.1'
-  compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.4-3'
-  compile 'com.arello-mobile:moxy:1.5.3'
-  compile 'com.arello-mobile:moxy-app-compat:1.5.3'
-  compile 'com.github.bumptech.glide:glide:3.8.0'
-  compile 'org.greenrobot:eventbus:3.0.0'
-  compile 'com.birbit:android-priority-jobqueue:2.0.1'
-  compile 'com.google.android.gms:play-services-analytics-impl:10.2.1'
-  compile 'com.android.support:appcompat-v7:25.3.1'
-  compile 'com.android.support:leanback-v17:25.3.1'
-  compile 'com.android.support:support-v4:25.3.1'
-  compile 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
-  compile 'com.mcxiaoke.volley:library:1.0.6'
-  compile 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
-  compile 'com.squareup.dagger:dagger:1.2.2'
-  compile 'com.github.vganin:dpadaware-recyclerview:1.0.1'
-  compile 'com.jakewharton:butterknife:8.4.0'
-  compile 'com.jakewharton.timber:timber:4.5.1'
+  implementation 'com.android.support:multidex:1.0.2'
+  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.4-3'
+  implementation 'com.arello-mobile:moxy:1.5.3'
+  implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
+  implementation 'com.github.bumptech.glide:glide:3.8.0'
+  implementation 'org.greenrobot:eventbus:3.0.0'
+  implementation 'com.birbit:android-priority-jobqueue:2.0.1'
+  implementation 'com.google.android.gms:play-services-analytics-impl:10.2.1'
+  implementation 'com.android.support:appcompat-v7:27.0.2'
+  implementation 'com.android.support:leanback-v17:27.0.2'
+  implementation 'com.android.support:support-v4:27.0.2'
+  implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
+  implementation 'com.mcxiaoke.volley:library:1.0.6'
+  implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
+  implementation 'com.squareup.dagger:dagger:1.2.2'
+  implementation 'com.github.vganin:dpadaware-recyclerview:1.0.1'
+  implementation 'com.jakewharton:butterknife:8.4.0'
+  implementation 'com.jakewharton.timber:timber:4.5.1'
 
-  testCompile 'org.apache.commons:commons-lang3:3.3.2'
-  testCompile('org.robolectric:robolectric:3.4.2') {
+  testImplementation 'org.apache.commons:commons-lang3:3.3.2'
+  testImplementation('org.robolectric:robolectric:3.4.2') {
     exclude module: 'support-v4'
   }
-  testCompile('com.squareup.assertj:assertj-android:1.1.1') {
+  testImplementation('com.squareup.assertj:assertj-android:1.1.1') {
     exclude module: 'support-v4'
     exclude module: 'support-annotations'
   }
 
-  testCompile 'org.assertj:assertj-core:3.8.0'
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.robolectric:framework:3.4.2'
-  testCompile 'org.robolectric:httpclient:3.4.2'
-  testCompile 'org.robolectric:supportv4:3.4.2'
-  testCompile 'org.robolectric:playservices:3.4.2'
-  testCompile 'org.robolectric:multidex:3.4.2'
-  testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
-  testCompile 'org.mockito:mockito-core:2.8.9'
+  testImplementation 'org.assertj:assertj-core:3.8.0'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.robolectric:framework:3.4.2'
+  testImplementation 'org.robolectric:httpclient:3.4.2'
+  testImplementation 'org.robolectric:supportv4:3.4.2'
+  testImplementation 'org.robolectric:playservices:3.4.2'
+  testImplementation 'org.robolectric:multidex:3.4.2'
+  testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+  testImplementation 'org.mockito:mockito-core:2.12.0'
 
-  testCompile 'com.squareup.okhttp3:mockwebserver:3.8.1'
-  testCompile 'commons-io:commons-io:2.4'
+  testImplementation 'com.squareup.okhttp3:mockwebserver:3.8.1'
+  testImplementation 'commons-io:commons-io:2.4'
 
   kapt 'com.arello-mobile:moxy-compiler:1.5.3'
   kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
-  kapt 'com.jakewharton:butterknife-compiler:8.4.0'
+  kapt 'com.jakewharton:butterknife-compiler:8.8.1'
   kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
 }
