--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -110,6 +110,7 @@ android {
 
   testOptions {
     unitTests.returnDefaultValues = true
+    unitTests.includeAndroidResources = true
     unitTests.all {
       maxParallelForks = 2
       forkEvery = 75
@@ -164,7 +165,7 @@ dependencies {
   implementation 'com.github.bumptech.glide:glide:3.8.0'
   implementation 'org.greenrobot:eventbus:3.0.0'
   implementation 'com.birbit:android-priority-jobqueue:2.0.1'
-  implementation 'com.google.android.gms:play-services-analytics-impl:10.2.1'
+  implementation 'com.google.android.gms:play-services-analytics-impl:11.8.0'
   implementation 'com.android.support:appcompat-v7:27.0.2'
   implementation 'com.android.support:leanback-v17:27.0.2'
   implementation 'com.android.support:support-v4:27.0.2'
@@ -173,11 +174,11 @@ dependencies {
   implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
   implementation 'com.squareup.dagger:dagger:1.2.2'
   implementation 'com.github.vganin:dpadaware-recyclerview:1.0.1'
-  implementation 'com.jakewharton:butterknife:8.4.0'
-  implementation 'com.jakewharton.timber:timber:4.5.1'
+  implementation 'com.jakewharton:butterknife:8.8.1'
+  implementation 'com.jakewharton.timber:timber:4.6.0'
 
   testImplementation 'org.apache.commons:commons-lang3:3.3.2'
-  testImplementation('org.robolectric:robolectric:3.4.2') {
+  testImplementation('org.robolectric:robolectric:3.5.1') {
     exclude module: 'support-v4'
   }
   testImplementation('com.squareup.assertj:assertj-android:1.1.1') {
@@ -187,11 +188,11 @@ dependencies {
 
   testImplementation 'org.assertj:assertj-core:3.8.0'
   testImplementation 'junit:junit:4.12'
-  testImplementation 'org.robolectric:framework:3.4.2'
-  testImplementation 'org.robolectric:httpclient:3.4.2'
-  testImplementation 'org.robolectric:supportv4:3.4.2'
-  testImplementation 'org.robolectric:playservices:3.4.2'
-  testImplementation 'org.robolectric:multidex:3.4.2'
+  testImplementation 'org.robolectric:shadows-framework:3.5.1'
+  testImplementation 'org.robolectric:shadows-httpclient:3.5.1'
+  testImplementation 'org.robolectric:shadows-supportv4:3.5.1'
+  testImplementation 'org.robolectric:shadows-playservices:3.5.1'
+  testImplementation 'org.robolectric:shadows-multidex:3.5.1'
   testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
   testImplementation 'org.mockito:mockito-core:2.12.0'
 
