--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
+
   repositories {
     jcenter()
     mavenCentral()
     google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.1'
+    classpath 'com.android.tools.build:gradle:3.1.4'
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1"
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
+    classpath 'org.jetbrains.kotlin:kotlin-allopen:1.2.70'
   }
 }
 
@@ -17,11 +21,11 @@ repositories {
 }
 
 dependencies {
-   project(":serenity-common")
-   project(":serenity-android-common")
-   project(":subtitle-converter")
-   project(":plexapp-rest-library")
-   project(":emby-lib")
-   project(":serenity-app")
+  project(":serenity-common")
+  project(":serenity-android-common")
+  project(":subtitle-converter")
+  project(":plexapp-rest-library")
+  project(":emby-lib")
+  project(":serenity-app")
 }
 
