--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.2.70'
 
     repositories {
         jcenter()
@@ -7,12 +7,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
     }
 
 }
 
 repositories {
+    google()
     maven {
         url "maven.google.com"
     }
@@ -30,11 +31,11 @@ apply plugin: 'kotlin-kapt'
 android {
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 27
     }
 
     compileSdkVersion 27
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '28.0.2'
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -44,32 +45,33 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'embylib', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.4-3"
+    implementation fileTree(dir: 'embylib', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70"
 
-    compile project(':serenity-common')
-    compile project(':serenity-android-common')
-    compile project(':memorizing-trust-manager')
+    implementation project(':serenity-common')
+    implementation project(':serenity-android-common')
+    implementation project(':memorizing-trust-manager')
 
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'org.java-websocket:Java-WebSocket:1.3.0'
-    compile 'com.mcxiaoke.volley:library:1.0.16'
-    compile 'com.birbit:android-priority-jobqueue:2.0.1'
-    compile 'com.squareup.dagger:dagger:1.2.2'
+    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'org.java-websocket:Java-WebSocket:1.3.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.16'
+    implementation 'com.birbit:android-priority-jobqueue:2.0.1'
+    implementation 'com.squareup.dagger:dagger:1.2.2'
     kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
+    implementation 'org.greenrobot:eventbus:3.0.0'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.assertj:assertj-core:3.8.0'
-    testCompile 'org.mockito:mockito-all:1.9.5'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.assertj:assertj-core:3.8.0'
+    testImplementation 'org.mockito:mockito-all:1.9.5'
     kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
-    testCompile('org.robolectric:robolectric:3.4.2') {
+    testImplementation('org.robolectric:robolectric:3.4.2') {
         exclude module: 'support-v4'
     }
-    testCompile 'org.robolectric:framework:3.4.2'
-    testCompile 'org.robolectric:httpclient:3.4.2'
-    testCompile 'org.robolectric:supportv4:3.4.2'
-    testCompile 'org.robolectric:playservices:3.4.2'
-    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+    testImplementation 'org.robolectric:framework:3.4.2'
+    testImplementation 'org.robolectric:httpclient:3.4.2'
+    testImplementation 'org.robolectric:supportv4:3.4.2'
+    testImplementation 'org.robolectric:playservices:3.4.2'
+    testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 
 }
 
