--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xms256m -Xmx512m -XX:+UseStringDeduplication
-android.enableBuildCache=false
-kotlin.incremental=false
+android.enableBuildCache=true
+kotlin.incremental=true
 
