--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -1,15 +1,16 @@
 buildscript {
 
   repositories {
+    google()
     jcenter()
     mavenCentral()
   }
-
 }
 
 apply plugin: 'java'
 apply plugin: "jacoco"
 apply plugin: 'org.sonarqube'
+apply plugin: 'kotlin-kapt'
 
 sonarqube {
   properties {
@@ -25,9 +26,7 @@ targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
 repositories {
-  maven {
-    url "maven.google.com"
-  }
+  google()
   jcenter()
   mavenCentral()
   maven {
@@ -51,19 +50,19 @@ sourceSets {
 
 dependencies {
 
-  compile project(':serenity-common')
-  compile 'com.squareup.retrofit2:retrofit:2.3.0'
-  compile 'com.squareup.okhttp3:okhttp:3.8.1'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-  compile('com.squareup.retrofit2:converter-simplexml:2.3.0') {
+  implementation project(':serenity-common')
+  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+  implementation('com.squareup.retrofit2:converter-simplexml:2.3.0') {
     exclude group: 'stax'
     exclude group: 'xpp3'
   }
-  compile 'com.squareup.retrofit2:converter-scalars:2.2.0'
+  implementation 'com.squareup.retrofit2:converter-scalars:2.2.0'
 
 
-  testCompile 'junit:junit:4.12'
-  testCompile 'xmlunit:xmlunit:1.3'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'xmlunit:xmlunit:1.3'
 }
 
 jar {
