--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
 
+  ext.kotlin_version = '1.2.70'
+
   repositories {
     google()
     jcenter()
@@ -7,8 +9,7 @@ buildscript {
 
   }
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
-    classpath 'org.jetbrains.kotlin:kotlin-allopen:1.1.4-3'
+    classpath 'org.jetbrains.kotlin:kotlin-allopen:1.2.70'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
   }
 }
@@ -25,9 +26,10 @@ repositories {
   }
 }
 
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+apply plugin: "kotlin-kapt"
 apply plugin: "kotlin-allopen"
 apply plugin: 'com.vanniktech.android.junit.jacoco'
 apply plugin: 'org.sonarqube'
@@ -69,9 +71,8 @@ android {
     test.java.srcDirs += 'src/test/kotlin'
   }
 
-
   compileSdkVersion 27
-  buildToolsVersion '27.0.1'
+  buildToolsVersion '28.0.2'
 
   if (project.hasProperty("keystore")) {
     signingConfigs {
@@ -133,12 +134,13 @@ junitJacoco {
 
 dependencies {
 
-  implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
 
+  implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
   implementation project(':plexapp-rest-library')
   implementation project(':subtitle-converter')
   implementation project(':emby-lib')
   implementation project(':serenity-android-common')
+  implementation project(':serenity-common')
 
   implementation ('com.google.android.exoplayer:exoplayer-core:r2.5.1') {
     exclude module: 'support-annotations'
@@ -155,26 +157,31 @@ dependencies {
     exclude group: 'com.android.support'
   }
 
-  implementation 'com.android.support:multidex:1.0.2'
-  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.4-3'
+  implementation 'com.android.support:multidex:1.0.3'
+  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.50'
   implementation 'com.arello-mobile:moxy:1.5.3'
   implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
   implementation 'com.github.bumptech.glide:glide:3.8.0'
   implementation 'org.greenrobot:eventbus:3.0.0'
   implementation 'com.birbit:android-priority-jobqueue:2.0.1'
   implementation 'com.google.android.gms:play-services-analytics-impl:11.8.0'
-  implementation 'com.android.support:appcompat-v7:27.0.2'
-  implementation 'com.android.support:leanback-v17:27.0.2'
-  implementation 'com.android.support:support-v4:27.0.2'
+  implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'com.android.support:leanback-v17:27.1.1'
+  implementation 'com.android.support:support-v4:27.1.1'
   implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
-  implementation 'com.mcxiaoke.volley:library:1.0.6'
+  implementation 'com.mcxiaoke.volley:library:1.0.16'
   implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
   implementation 'com.squareup.dagger:dagger:1.2.2'
   implementation 'com.github.vganin:dpadaware-recyclerview:1.0.1'
   implementation 'com.jakewharton:butterknife:8.8.1'
   implementation 'com.jakewharton.timber:timber:4.6.0'
+  // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
+  implementation ("org.simpleframework:simple-xml:2.7.1") {
+    exclude group: 'stax'
+    exclude group: 'xpp3'
+  }
 
-  testImplementation 'org.apache.commons:commons-lang3:3.3.2'
+  testImplementation 'org.apache.commons:commons-lang3:3.7'
   testImplementation('org.robolectric:robolectric:3.5.1') {
     exclude module: 'support-v4'
   }
