--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.2.70'
 
     repositories {
         jcenter()
@@ -7,11 +7,12 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
     }
 }
 
 repositories {
+    google()
     maven {
         url "maven.google.com"
     }
@@ -23,8 +24,8 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.4-3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70'
 
     compile 'com.squareup.dagger:dagger:1.2.2'
     kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
