--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -1,27 +1,26 @@
 buildscript {
-    ext.kotlin_version = '1.2.70'
+  ext.kotlin_version = '1.2.70'
 
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
 
-    dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
-    }
-
+  dependencies {
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
+  }
 }
 
 repositories {
-    google()
-    maven {
-        url "maven.google.com"
-    }
-    jcenter()
-    mavenCentral()
-    flatDir {
-      dirs 'embylib'
-    }
+  google()
+  maven {
+    url "maven.google.com"
+  }
+  jcenter()
+  mavenCentral()
+  flatDir {
+    dirs 'embylib'
+  }
 }
 
 apply plugin: 'com.android.library'
@@ -29,50 +28,49 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
-    defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 27
-    }
+  defaultConfig {
+    minSdkVersion 17
+    targetSdkVersion 27
+  }
 
-    compileSdkVersion 27
-    buildToolsVersion '28.0.2'
+  compileSdkVersion 27
+  buildToolsVersion '28.0.2'
 
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-        test.java.srcDirs += 'src/test/kotlin'
-    }
-
+  sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'embylib', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70"
 
-    implementation project(':serenity-common')
-    implementation project(':serenity-android-common')
-    implementation project(':memorizing-trust-manager')
+  implementation project(':serenity-common')
+  implementation project(':serenity-android-common')
 
-    implementation 'com.google.code.gson:gson:2.7'
-    implementation 'org.java-websocket:Java-WebSocket:1.3.0'
-    implementation 'com.mcxiaoke.volley:library:1.0.16'
-    implementation 'com.birbit:android-priority-jobqueue:2.0.1'
-    implementation 'com.squareup.dagger:dagger:1.2.2'
-    kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
-    implementation 'org.greenrobot:eventbus:3.0.0'
+  implementation 'com.google.code.gson:gson:2.7'
+  implementation 'com.mcxiaoke.volley:library:1.0.16'
+  implementation 'com.birbit:android-priority-jobqueue:2.0.1'
+  implementation 'com.squareup.dagger:dagger:1.2.2'
+  kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
+  implementation 'org.greenrobot:eventbus:3.0.0'
+  implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6'
+  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+  implementation 'com.jakewharton.timber:timber:4.6.0'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.assertj:assertj-core:3.8.0'
-    testImplementation 'org.mockito:mockito-all:1.9.5'
-    kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
-    testImplementation('org.robolectric:robolectric:3.4.2') {
-        exclude module: 'support-v4'
-    }
-    testImplementation 'org.robolectric:framework:3.4.2'
-    testImplementation 'org.robolectric:httpclient:3.4.2'
-    testImplementation 'org.robolectric:supportv4:3.4.2'
-    testImplementation 'org.robolectric:playservices:3.4.2'
-    testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
-
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.assertj:assertj-core:3.8.0'
+  testImplementation 'org.mockito:mockito-all:1.9.5'
+  kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
+  testImplementation('org.robolectric:robolectric:3.8') {
+    exclude module: 'support-v4'
+  }
+  testImplementation 'org.robolectric:shadows-supportv4:3.8'
+  testImplementation 'org.robolectric:shadows-framework:3.8'
+  testImplementation 'org.robolectric:shadowapi:3.8'
+  testImplementation 'org.robolectric:shadows-playservices:3.8'
+  testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 }
 
 sourceCompatibility = "1.7"
