Switch to emby to try and avoid dex issues and reduce library size

--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.70"
 
   implementation project(':serenity-common')
   implementation project(':serenity-android-common')
@@ -52,10 +52,10 @@ dependencies {
   implementation 'com.squareup.dagger:dagger:1.2.2'
   kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
   implementation 'org.greenrobot:eventbus:3.0.0'
-  implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6'
-  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.6'
+  implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
+  implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+  implementation 'net.danlew:android.joda:2.9.9.4'
   implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-  implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
   implementation 'com.squareup.okhttp3:okhttp:3.8.1'
   implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
   implementation 'com.jakewharton.timber:timber:4.6.0'
@@ -74,6 +74,6 @@ dependencies {
   testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
 
