--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xms256m -Xmx512m -XX:+UseStringDeduplication
-android.enableBuildCache=true
+android.enableBuildCache=false
 kotlin.incremental=true
+android.enableD8=true
+
 
