--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.70'
 
     compile 'com.squareup.dagger:dagger:1.2.2'
     kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
