--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 buildscript {
 
+  ext {
+    kotlinVersion = "1.2.70"
+  }
+
   repositories {
     jcenter()
     mavenCentral()
@@ -8,8 +12,8 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:3.1.4'
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1"
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
-    classpath 'org.jetbrains.kotlin:kotlin-allopen:1.2.70'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
   }
 }
 
@@ -28,3 +32,35 @@ dependencies {
   project(":serenity-app")
 }
 
+project.ext {
+  okhttpVersion = "3.8.1"
+  kotlinVersion = "1.2.70"
+  androidPriorityJobQueueVersion = "2.0.1"
+  daggerVersion = "1.2.5"
+  eventBus = "3.1.1"
+  moshiKotlinVersion = "1.6.0"
+  retrofitVersion = "2.4.0"
+  jodaTimeVersion = "2.9.9.4"
+  timberVersion = "4.7.1"
+  exoplayerVersion = "r2.5.4"
+  glideOkHttpVersion = "1.5.0"
+  moxyVersion = "1.5.3"
+  glideVersion = "3.8.0"
+  googleAnalyticsVersion = "16.0.3"
+  androidSupportLibVersion = "27.1.1"
+  universalCharDetVersion = "1.0.3"
+  volleyVersion = "1.0.16"
+  dpadAwareVersion = "1.0.1"
+  butterKnifeVersion = "8.8.1"
+  simpleXmlVersion = "2.7.1"
+
+  commonsLangVersion = "3.7"
+  junitVersion = "4.12"
+  assertjVersion = "3.11.1"
+  mockitoVersion = "2.21.0"
+  robolectricVersion = "3.8"
+  openglApiVersion = "gl1.1-android-2.1_r1"
+  xmlUnitVersion = "1.3"
+  assertJAndroidVersion = "1.1.1"
+  commonsioVersion = "2.6"
+}
