--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-  ext.kotlin_version = '1.2.70'
 
   repositories {
     jcenter()
@@ -7,7 +6,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 }
 
@@ -43,35 +42,35 @@ android {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.70"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
   implementation project(':serenity-common')
   implementation project(':serenity-android-common')
 
-  implementation 'com.birbit:android-priority-jobqueue:2.0.1'
-  implementation 'com.squareup.dagger:dagger:1.2.5'
-  kapt 'com.squareup.dagger:dagger-compiler:1.2.5'
-  implementation 'org.greenrobot:eventbus:3.0.0'
-  implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
-  implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
-  implementation 'net.danlew:android.joda:2.9.9.4'
-  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-  implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-  implementation 'com.jakewharton.timber:timber:4.6.1'
+  implementation "com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion"
+  implementation "com.squareup.dagger:dagger:$daggerVersion"
+  kapt "com.squareup.dagger:dagger-compiler:$daggerVersion"
+  implementation "org.greenrobot:eventbus:$eventBus"
+  implementation "com.squareup.moshi:moshi-kotlin:$moshiKotlinVersion"
+  implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+  implementation "net.danlew:android.joda:$jodaTimeVersion"
+  implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+  implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+  implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+  implementation "com.jakewharton.timber:timber:$timberVersion"
 
-  testImplementation 'junit:junit:4.12'
-  testImplementation 'org.assertj:assertj-core:3.8.0'
-  testImplementation 'org.mockito:mockito-all:1.9.5'
-  kaptTest 'com.squareup.dagger:dagger-compiler:1.2.5'
-  testImplementation('org.robolectric:robolectric:3.8') {
+  testImplementation "junit:junit:$junitVersion"
+  testImplementation "org.assertj:assertj-core:$assertjVersion"
+  testImplementation "org.mockito:mockito-core:$mockitoVersion"
+  kaptTest "com.squareup.dagger:dagger-compiler:$daggerVersion"
+  testImplementation("org.robolectric:robolectric:$robolectricVersion") {
     exclude module: 'support-v4'
   }
-  testImplementation 'org.robolectric:shadows-supportv4:3.8'
-  testImplementation 'org.robolectric:shadows-framework:3.8'
-  testImplementation 'org.robolectric:shadowapi:3.8'
-  testImplementation 'org.robolectric:shadows-playservices:3.8'
-  testImplementation 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
+  testImplementation "org.robolectric:shadows-supportv4:$robolectricVersion"
+  testImplementation "org.robolectric:shadows-framework:$robolectricVersion"
+  testImplementation "org.robolectric:shadowapi:$robolectricVersion"
+  testImplementation "org.robolectric:shadows-playservices:$robolectricVersion"
+  testImplementation "org.khronos:opengl-api:$openglApiVersion"
 }
 
 sourceCompatibility = "1.8"
