Add initial server screen for selection of Emby or Plex.
Server screen is populated and will ask you to select a server.
Eventually it should remember which server you selected and will
take you to the appropriate screen.

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -171,6 +171,7 @@ dependencies {
   implementation "com.github.vganin:dpadaware-recyclerview:$dpadAwareVersion"
   implementation "com.jakewharton:butterknife:$butterKnifeVersion"
   implementation "com.jakewharton.timber:timber:$timberVersion"
+  implementation "com.android.support:cardview-v7:$androidSupportLibVersion"
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
   implementation("org.simpleframework:simple-xml:$simpleXmlVersion") {
     exclude group: 'stax'
