--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,5 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xms256m -Xmx512m -XX:+UseStringDeduplication
-android.enableBuildCache=false
 kotlin.incremental=true
 android.enableD8=true
-
-
+org.gradle.configureondemand=false
