--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -20,12 +20,16 @@ repositories {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
     implementation "com.squareup.dagger:dagger:$daggerVersion"
     kapt "com.squareup.dagger:dagger-compiler:$daggerVersion"
+
+    implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
 }
 
 sourceCompatibility = "1.8"
